# workspace-agent-suite

./: .env.example  .gitignore  README.md  agent_core.py  agent_view.py  app.py  auth_setup.py  calendar_agent.py  pyproject.toml  refund_agent.py  requirements.txt
demo/: DEMO_GUIDE.md  PDF_TEST_RUNSHEET.md  record_demo.py  seed_calendar.py  view_terminal.py
demo/data/: calendar.json  refund.json
docs/: report.md
docs/superpowers/specs/: 2026-05-25-workspace-agent-suite-design.md  2026-05-30-find-free-slots-and-rich-demo-design.md
submission/: README.md  build_pdf.py  自我評估報告.html  自我評估報告.md
testdata/: create_calendar_events.py  send_test_emails.py  send_test_emails_smtp.py
tests/: send_test_emails.py  test_calendar_advanced.py  test_calendar_crud.py  test_free_slots.py
